--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -1,21 +1,70 @@
 <div class="main col-lg-12 row">
-  <div class=" col-lg-4">
+  <div class=" col-lg-6">
     <div class="container col-lg-12">
-      <h5>Add new invoice</h5>
+      <h5>{{current?'Edit invoice':'Add new invoice'}}</h5>
+      <a class="{{current?'':'hide'}} button new-invoice" (click)="newInvoice()" >new</a>
       <form>
-          <div class="form-group">
-              <label for="invoice_title">Invoice title</label>
-              <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.title" placeholder="Invoice title">
+          <div class="col-lg-12 row">
+            <div class="col-lg-6">
+              <div class="form-group">
+                  <label for="invoice_title">Street</label>
+                  <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.vat" placeholder="BE123456789">
+              </div>
+
+              <div class="form-group">
+                  <label for="invoice_title">Street</label>
+                  <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.street" placeholder="Rue du milieu, 6">
+              </div>
+              
+              <div class="form-group">
+                  <label for="invoice_title">City</label>
+                  <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.city" placeholder="Bruxelles">
+              </div>
+
+              <div class="form-group">
+                  <label for="invoice_title">Postcode</label>
+                  <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.postcode" placeholder="1000">
+              </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="form-group">
+                    <label for="invoice_title">Street</label>
+                    <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.cust_vat" placeholder="BE123456789">
+                </div>
+                <div class="form-group">
+                    <label for="invoice_title">Street</label>
+                    <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.cust_street" placeholder="Rue du milieu, 6">
+                </div>
+                
+                <div class="form-group">
+                    <label for="invoice_title">City</label>
+                    <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.cust_city" placeholder="Bruxelles">
+                </div>
+  
+                <div class="form-group">
+                    <label for="invoice_title">Postcode</label>
+                    <input [ngModelOptions]="{standalone: true}" name="invoice_title" id="invoice_title" type="text" class="form-control"  [(ngModel)]="invoice.cust_postcode" placeholder="1000">
+                </div>
+
+            </div>
           </div>
 
           <div class="form-group">
-              <label for="invoice_id">Invoice id</label>
-              <input [ngModelOptions]="{standalone: true}" name="invoice_id" id="invoice_id" type="text" class="form-control"  [(ngModel)]="invoice.id" placeholder="Invoice id">
-          </div>
-
-          <div class="form-group">
-            <button (click)="addItem()">+ add item</button>
-            <div *ngFor="let i of invoice.items"><input [ngModelOptions]="{standalone: true}" [(ngModel)]="i.description"/></div>
+            <a (click)="addItem()" class="button">+ add item</a>
+            <div class="col-lg-12 row new-items {{invoice.items.length>0?'':'hide'}}">
+              <div class="col-lg-2">Project</div>
+              <div class="col-lg-2">Period</div>
+              <div class="col-lg-2">Nature</div>
+              <div class="col-lg-2">Days</div>
+              <div class="col-lg-2">Rate</div>
+            </div>
+            <div *ngFor="let i of invoice.items" class="col-lg-12 row">
+                <div class="col-lg-2"><input [ngModelOptions]="{standalone: true}" [(ngModel)]="i.project"/></div>
+                <div class="col-lg-2"><input [ngModelOptions]="{standalone: true}" [(ngModel)]="i.period"/></div>
+                <div class="col-lg-2"><input [ngModelOptions]="{standalone: true}" [(ngModel)]="i.nature"/></div>
+                <div class="col-lg-2"><input [ngModelOptions]="{standalone: true}" [(ngModel)]="i.days"/></div>
+                <div class="col-lg-2"><input [ngModelOptions]="{standalone: true}" [(ngModel)]="i.rate"/></div>
+            </div>
           </div>
 
       </form>
@@ -44,21 +93,88 @@
   </div>
 
 
-  <div class="container col-lg-7">
-    <i class="glyphicon glyphicon-eye-open"></i>
-    <h3 class="{{invoice.title?'':'gris'}}">{{invoice.title?invoice.title:'No title'}}</h3>
-    <div class="items">
-      <div class="item-header col-lg-12 row">
-            <div class="col-lg-8">Description</div>
-            <div class="col-lg-2">Amount</div>
-            <div class="col-lg-2">Unit</div>
+  <div class="container col-lg-6 invoice-view">
+    <div class="invoice-header col-lg-12 row">
+      <div class="logo col-lg-10"><img src="./assets/img/logo.png" height="75px" width="75px"/></div>
+      <div class="label col-lg-2"><label>INVOICE</label></div>
+      <div class="to col-lg-10">
+        <label>invoice to : {{invoice.cust_vat}}</label><br/>
+        <label>{{invoice.cust_street}}</label><br/>
+        <label>{{invoice.cust_postcode}}, {{invoice.cust_city}}</label><br/>
       </div>
-      <div *ngFor="let i of invoice.items" class="item col-lg-12 row">
-        <div class="col-lg-8">{{i.description}}</div>
-        <div class="col-lg-2">{{i.amount}}</div>
-        <div class="col-lg-2">{{i.unit}}</div>
+      <div class="id col-lg-2">INVOICE NUMBER</div>
+    </div>
+    <h3 class="{{invoice.title?'':'gris'}}">{{invoice.title?invoice.title:'No title'}}</h3>
+    <div class="col-lg-12 items-header">
+      <div class="col-lg-12 row">
+        <div class="col-lg-3 item-header">PROJECT</div>
+        <div class="col-lg-1 item-header">PERIOD</div>
+        <div class="col-lg-4 item-header">NATURE</div>
+        <div class="col-lg-1 item-header">DAYS</div>
+        <div class="col-lg-1 item-header">RATE</div>
+        <div class="col-lg-2 item-header">AMOUNT</div>
+      </div>
+    </div>
+    <div class="col-lg-12 items">
+      <div *ngFor="let i of invoice.items" class="col-lg-12 row">
+        <div class="col-lg-3 item">{{i.project}}</div>
+        <div class="col-lg-1 item">{{i.period}}</div>
+        <div class="col-lg-4 item">{{i.nature}}</div>
+        <div class="col-lg-1 item">{{i.days}}</div>
+        <div class="col-lg-1 item">{{i.rate}}</div>
+        <div class="col-lg-2 item">{{i.amount}}</div>
+      </div>
+      <div class="col-lg-12 row">
+          <div class="col-lg-3 item-last-but-not-least"></div>
+          <div class="col-lg-1 item-last-but-not-least"></div>
+          <div class="col-lg-4 item-last-but-not-least"></div>
+          <div class="col-lg-1 item-last-but-not-least"></div>
+          <div class="col-lg-1 item-last-but-not-least"></div>
+          <div class="col-lg-2 item-last-but-not-least"></div>
+      </div>
+    </div>
+    
+    <div class="col-lg-12 items-footer">
+        <div class="col-lg-12 row">
+          <div class="col-lg-8"></div>
+          <div class="col-lg-2 item-footer-label">SUBTOTAL</div>
+          <div class="col-lg-2 item-footer">155</div>
+        </div>
+      </div>
+      
+    <div class="col-lg-12 items-footer">
+        <div class="col-lg-12 row">
+          <div class="col-lg-8"></div>
+          <div class="col-lg-2 item-footer-label">TAXABLE</div>
+          <div class="col-lg-2 item-footer">155</div>
+        </div>
       </div>
 
-    </div>
+      
+    <div class="col-lg-12 items-footer">
+        <div class="col-lg-12 row">
+          <div class="col-lg-8"></div>
+          <div class="col-lg-2 item-footer-label">VAT RATE</div>
+          <div class="col-lg-2 item-footer">155</div>
+        </div>
+      </div>
+
+      
+    <div class="col-lg-12 items-footer">
+        <div class="col-lg-12 row">
+          <div class="col-lg-8"></div>
+          <div class="col-lg-2 item-footer-label">VAT AMOUNT</div>
+          <div class="col-lg-2 item-footer">155</div>
+        </div>
+      </div>
+
+      
+      <div class="col-lg-12 items-footer">
+          <div class="col-lg-12 row">
+            <div class="col-lg-8"></div>
+            <div class="col-lg-2 item-footer-label" style="font-weight: bold;">TOTAL</div>
+            <div class="col-lg-2 item-footer" style="font-weight: bold;">155</div>
+          </div>
+        </div>
   </div>
 </div>
