--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -1,130 +1,9 @@
-@import '../vendor/bootstrap-4.0.0-dist/css/bootstrap.min.css';
-.container {
-    border : solid 1px #BEBEBE;
-    padding: 25px;
-    color: rgb(95, 95, 95);
-    font-size: 12px;
+.invoicer-edit, .invoiced-edit {
+    border : solid 1px #999;
+    padding : 25px;
+    margin-bottom: 5px;
 }
-.main {
-    font-family: Arial, Helvetica, sans-serif;
-}
-.gris {
-    color: #888;
-}
-a.button {
-    cursor: pointer;
-    border-radius: 5%;
-    border: solid 1px #999;
-    padding:5px;
-}
-a.button:hover {
-    background-color: rgb(192, 192, 192);
-}
-.items{
-    
-    color: rgb(95, 95, 95);
-    border : solid 1px #BEBEBE;
-    padding: 0px;
-}
-.item-last-but-not-least{
-    
-    border-right: 1px solid #BEBEBE;
-    min-height: 150px;
-    padding: 0px;
-    text-indent: 5px;
-    font-size: 10px;
-}
-
-.items>.row{
-    padding: 0px;
+.invoiced-edit label, .invoicer-edit label {
+    display: block;
     margin: 0px;
-}
-.item{
-    border-right: 1px solid #BEBEBE;
-    padding: 0px;
-    text-indent: 5px;
-    font-size: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-.item-last-but-not-least:last-of-type{
-    border-right:none;
-}
-.item:last-of-type{
-    border:none;
-}
-.items-header {
-    
-    border : solid 1px #BEBEBE;
-    border-bottom: none;
-    padding: 0px;
-}
- .items-footer {
-    border-bottom: none;
-    padding: 0px;
-}
-.item-header {
-    
-    border-right: 1px solid #BEBEBE;
-    padding: 5px 0px 5px 0px;
-    text-indent: 5px;
-    font-size: 10px;
-    font-weight: bold;
-}
-.item-footer { 
-    border: 1px solid #BEBEBE;
-    border-left:none;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    font-size: 10px;
-}
-.item-footer-label {
-    border-right:  1px solid #BEBEBE;
-    text-align: right;
-    text-indent: 2px;
-}
-.item-footer:last-of-type{
-    border-top: none;
-}
-.items-header>.row, .items-footer>.row{
-    padding: 0px;
-    margin: 0px;
-}
-.items-footer>.row {
-    border-left : solid 1px #FFF;
-    border-right : solid 1px #FFF;
-}
-.item-header:last-of-type{
-    border:none;
-}
-.hide{
-    display: none;
-}
-.new-items {
-    margin-top: 25px;
-}
-
-.new-invoice.button {
-    float:right;
-}
-.invoice-header {
-    padding: 0px;
-    margin: 0px;
-}
-.invoice-header>.logo {
-    padding: 0px;
-}
-.invoice-header>.label {
-    padding: 0px;
-    text-align: right;
-    font-size: 14px;
-    font-weight: bold;
-    color: #999;
-}
-.invoice-header>.id{
-    padding:0px;
-    text-align: right;
-}
-.invoice-header>.to{
-    padding: 0px;
 }
