--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
-
+@import '~font-awesome/css/font-awesome.css';
 /*@import '../vendor/bootstrap-4.0.0-dist/css/bootstrap.min.css';*/
 .container {
     border : solid 1px #BEBEBE;
