--- a/src/app/item-list/item-list.component.css
+++ b/src/app/item-list/item-list.component.css
@@ -17,7 +17,6 @@
 .add-items.table-items > div:last-of-type {
     border-right:none;
 }
-
 .new-items {
     margin-top: 25px;
 }
@@ -27,10 +26,6 @@
 .add-items>div {
     border-right:none;
     padding: 5px;
-}
-.add-items:last-of-type>div{
-    
-    border-bottom:solid 1px #BEBEBE;
 }
 .delete-item {
     background-color: rgb(207, 56, 56);
@@ -51,4 +46,8 @@
     display: block !important;
     margin: 0 !important;
     margin-top: 7px !important;
+}
+
+.container-table-items {
+    box-shadow: 1px 1px 1px 1px #ddd;
 }
