--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,57 @@
-@import './vendor/bootstrap-4.0.0-dist/css/bootstrap.min.css';
+.sidebar {
+    background-color: rgb(249, 249, 249);
+    border-right: solid 1px #DDD;
+}
+.sidebar > ul {
+    padding-left: 15px;
+}
+.sidebar > ul > li {
+    padding: 5px 0px 5px 0px;
+    list-style-type: none;
+    color: rgb(70, 70, 70);
+    font-weight: 500;
+}
+.sidebar > ul > li > fa-icon {
+    margin-right:25px;
+}
+
+.sidebar > ul > li:hover {
+    cursor: pointer;
+    background-color: #d6d6d6;
+}
+.menu-top {
+    background-color: rgb(87, 87, 87);
+    box-shadow: 0px 0px 5px 3px #d6d6d6;
+    overflow: visible;
+    height: 48px;
+    z-index: 1;
+    position: relative;
+}
+.menu-top > .brand {
+    color: #EEE;
+    font-weight: 500;
+    font-size: 18px;
+    padding: 10px;
+
+}
+.recent-hr {
+    margin-left: 15px;
+}
+ul.recent {
+    padding: 0px;
+    text-align: center;
+    font-weight: 400;
+}
+ul.recent>li {
+    
+    padding: 0px 0px 0px 0px !important;
+    list-style-type: none !important;
+    color: rgb(70, 70, 70) !important;
+    font-weight: 200 !important;
+    text-align: left;
+    font-size: 14px;
+}
+ul.recent>li:hover {
+    
+    background-color: transparent !important;
+}
