--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~font-awesome/css/font-awesome.css';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 /*@import '../vendor/bootstrap-4.0.0-dist/css/bootstrap.min.css';*/
 .container {
-    border : solid 1px #BEBEBE;
-    padding: 25px;
+    /*border : solid 1px #BEBEBE;
+    padding: 25px;*/
+    margin-top: 25px;
     color: rgb(95, 95, 95);
     font-size: 12px;
     height: 100%;
