--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
     margin-top: 25px;
     color: rgb(95, 95, 95);
     font-size: 12px;
-    height: 100%;
+    /*height: 100%;*/
 }
 .main {
     font-family: Arial, Helvetica, sans-serif;
