--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,8 +2,12 @@
     background-color: rgb(249, 249, 249);
     border-right: solid 1px #DDD;
 }
-.sidebar > ul {
-    padding-left: 15px;
+.sidebar > ul, ul.recent > li {
+    margin-top: 15px;
+    padding-left: 15px !important;
+}
+ul.recent {
+    padding-left: 0px !important;
 }
 .sidebar > ul > li {
     padding: 5px 0px 5px 0px;
@@ -21,7 +25,7 @@
 }
 .menu-top {
     background-color: rgb(87, 87, 87);
-    box-shadow: 0px 0px 5px 3px #d6d6d6;
+    box-shadow: 0px 0px 20px 10px #d6d6d6;
     overflow: visible;
     height: 48px;
     z-index: 1;
