--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
         <ul>
             <li><fa-icon [icon]="faHome"></fa-icon> Menu</li>
             <li><fa-icon [icon]="faHistory"></fa-icon> History</li>
-            <li><fa-icon [icon]="faFileInvoice"></fa-icon> Invoices</li>
+            <li routerLink="/invoice" routerLinkActive="active"><fa-icon [icon]="faFileInvoice"></fa-icon> Invoices</li>
+            <li routerLink="/invoiceprofile" routerLinkActive="active"><fa-icon [icon]="faProfile"></fa-icon>Profiles</li>
         </ul>
         <hr class="recent-hr"/>
         <ul class="recent">
@@ -13,8 +14,8 @@
             <li><fa-icon [icon]="faFileInvoice"></fa-icon> Customer</li>
         </ul>
     </div>
-    <div class="col-sm-10">
-        <app-invoice></app-invoice>
+    <div class="col-sm-10 routerContent">
+        <router-outlet></router-outlet>
     </div>
 </div>
 
