--- a/src/app/data-table/data-table.component.html
+++ b/src/app/data-table/data-table.component.html
@@ -6,10 +6,14 @@
     <div class="data-table-row data-column" *ngFor="let c of dataColumns" height="columnsHeight">{{i[c]}}</div>
   </div>
 </div>
-
+-->
 <table mat-table matSort [dataSource]="matDataSource" class="mat-elevation-z8" width="100%">
   <span *ngFor="let c of dataColumns">
-    <ng-container matColumnDef={{c}}>
+    <ng-container matColumnDef={{c}} *ngIf="c === 'open'">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> actions </th>
+        <td mat-cell *matCellDef="let element" (click)="open(element.id)"><fa-icon [icon]="faOpen"></fa-icon></td>
+    </ng-container>
+    <ng-container matColumnDef={{c}} *ngIf="c !== 'open'">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> {{c}} </th>
       <td mat-cell *matCellDef="let element"> {{element[c]}} </td>
     </ng-container>
@@ -18,4 +22,4 @@
   <tr mat-header-row *matHeaderRowDef="dataColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: dataColumns;"></tr>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-</table>-->
+</table>
